@@ -1,3 +1,8 @@
+Mon Sep  3 12:15:55 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/check_mandirs.c (test_manfile): Fix comment typos and
+	  formatting.
+
 Mon Sep  3 12:01:36 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* .bzrignore: Update for manual directory renaming.
